# smart-fan

./: .gitignore  Makefile  README.md
.west/: config
app/: CMakeLists.txt  prj.conf
app/boards/: esp32.overlay
app/dts/bindings/: servo.yaml
app/include/smart_fan/: fan.h  sensor.h  servo.h
app/src/: fan.c  main.c  sensor.c  servo.c
